Closed
Bug 143783
Opened 24 years ago
Closed 22 years ago
Splash screen should catch mouse button events
Categories
(SeaMonkey :: UI Design, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: stef, Assigned: kherron+mozilla)
Details
Attachments
(1 file)
|
736 bytes,
patch
|
bryner
:
review+
blizzard
:
superreview+
|
Details | Diff | Splinter Review |
On X11, the splash screen redirects all mouse buttons events to
the background. For example, on my system (linux & sawfish window
manager), a left click on the splash screen opens the windows
list popup.
I propose to close the splash screen when a mouse button event
is catched (the gnome desktop splash screen works like that).
build: Linux 2002050921 (also tested on HPUX11)
Comment 1•24 years ago
|
||
I don't think that we close the splash screen if you click with the mouse.
You can disable it if you use "mozilla -nosplash"
Is that enough ?
| Reporter | ||
Comment 2•24 years ago
|
||
Not really! The problem is to disable the splash screen (in fact on Linux the
default is without a splash screen).
Clicking on the splash screen SHOULD NOT OPEN A NON-MOZILLA MENU.
Closing the spash screen was just a possible enhancement (I could have
filled a separate bug for that).
Comment 3•24 years ago
|
||
-> XP APPS
Assignee: Matti → blaker
Component: Browser-General → XP Apps: GUI Features
QA Contact: imajes-qa → paw
Comment 4•24 years ago
|
||
works for me. Can you reproduce this with a recent Mozilla version like 1.1beta?
| Reporter | ||
Comment 5•24 years ago
|
||
I am now using fvwm2 and the problem is still there with
2002081104 (Linux). Clicking on the splash screen opens
the background menu of fwmw2
Which window manager/desktop are you using?
Comment 6•24 years ago
|
||
KDE 3.0.2
| Reporter | ||
Comment 7•24 years ago
|
||
I do not have it installed so I can't test it.
However, I wouldn't be surprised if the KDE was
handling background events like Gnome/Nautilus
by inserting a fullscreen window below any other
windows (but on top of the root window). In that
case, splash events directly passed to the root
window would not trigger any effects.
Can you try with a simple wm (twm,fvwm,...)?
I also noticed that the splash window is not
configured to process or intercept (not
propagate) mouse button events:
# chauveau@simak:~$ xwininfo -events
#
#xwininfo: Please select the window about which you
# would like information by clicking the
# mouse in that window.
#
#xwininfo: Window id: 0x800005 "<unknown>"
#
# Someone wants these events:
# StructureNotify
# FocusChange
# Do not propagate these events:
# Override redirection?: Yes
#
Compare that with how a typical application
such as xclock handles button events.
#xwininfo: Please select the window about which you
# would like information by clicking the
# mouse in that window.
#
#xwininfo: Window id: 0x1200009 "xclock"
#
# Someone wants these events:
# EnterWindow
# LeaveWindow
# StructureNotify
# FocusChange
# PropertyChange
# ColormapChange
# Do not propagate these events:
# ButtonPress
# ButtonRelease
# Override redirection?: No
| Assignee | ||
Comment 8•23 years ago
|
||
I can reproduce this with build ID 20030315 for linux with either gtk or gtk2. I
can't reproduce it under KDE and I don't have fvwm2 on my system, but when I run
"mozilla -splash" under icewm, right-clicking on the splash displays the icewm menu.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: splash screen should catch mouse buttons events → Splash screen should catch mouse button events
| Assignee | ||
Comment 9•23 years ago
|
||
This patch makes the splash screen receive button presses and releases. When
run under ICEWM, it prevents the wm menu from appearing. I haven't seen any
adverse effects under KDE.
| Assignee | ||
Updated•23 years ago
|
Attachment #117357 -
Flags: superreview?(blizzard)
Comment 10•23 years ago
|
||
Comment on attachment 117357 [details] [diff] [review]
Make the splash window receive button events.
sr=blizzard
Attachment #117357 -
Flags: superreview?(blizzard) → superreview+
| Assignee | ||
Updated•23 years ago
|
Attachment #117357 -
Flags: review?(jaggernaut)
Updated•23 years ago
|
Attachment #117357 -
Flags: review?(jaggernaut) → review?(bryner)
Updated•23 years ago
|
Attachment #117357 -
Flags: review?(bryner) → review+
Comment 11•22 years ago
|
||
Kenneth Herron, your patch has r= ad sr= but was not checked in as I see from
http://lxr.mozilla.org/seamonkey/source/xpfe/bootstrap/nsNativeAppSupportGtk.cpp#108
If this is still an issue, would you mind testing if this patch still does the
right thing and let us know that it should be checked in?
(I have no Linux to test it)
| Assignee | ||
Comment 12•22 years ago
|
||
I didn't try to reproduce the problem--it doesn't appear under kde as I noted
before--but I have no reason to believe it has disappeared. I ran cvs builds
with the patch installed for several months last year with no ill effect. The
patch still applies cleanly.
After getting r/sr on the patch I was never able to find someone to check it in
for me. If you can get it checked in, then please do.
Updated•22 years ago
|
Assignee: blake → kjh-5727
Comment 13•22 years ago
|
||
Checking in xpfe/bootstrap/nsNativeAppSupportGtk.cpp;
/cvsroot/mozilla/xpfe/bootstrap/nsNativeAppSupportGtk.cpp,v <--
nsNativeAppSupportGtk.cpp
new revision: 1.16; previous revision: 1.15
done
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: Core → Mozilla Application Suite
You need to log in
before you can comment on or make changes to this bug.
Description
•