Bug 143783       Splash screen should catch mouse button events patch by kjh-5727@comcast.net (Kenneth Herron (kherron)) r=bryner sr=blizzard